<resources>
    <string name="app_name">Open Live Trivia</string>

    <!--Authentication-->
    <string name="log_in_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="register_select_another_account"><u>Wrong account?\nSelect a different Google account.</u></string>
    <string name="username_hint">Username</string>
    <string name="username_available">Username available</string>
    <string name="username_unavailable">Username unavailable</string>
    <string name="message_logged_in_successfully">Logged in successfully</string>
    <string name="message_failed_to_log_in">Failed to log in: %s</string>
    <string name="message_registered">Registered successfully</string>
    <string name="message_logged_out">Logged out</string>
    <string name="message_unable_to_authenticate">Unable to authenticate with the server.\nYou are now in offline mode.</string>
    <string name="message_failed_to_check_server_compatibility">Failed to check server compatibility</string>
    <string name="dialog_title_incompatible_version">Incompatible version</string>
    <string name="dialog_message_incompatible_version">The current app version is not compatible with the server anymore. Please update to the latest version.</string>
    <string name="message_app_update_available">Warning: Please update the app to the latest version for improved experience</string>

    <!--Main Menu-->
    <string name="play_button">Play</string>
    <string name="leaderboard_button">Leaderboard</string>
    <string name="moderate_reports_button">Moderate Reports</string>
    <string name="settings_button">Settings</string>
    <string name="log_out_button">Log out</string>
    <string name="message_amount_won">You won %s points</string>
    <string name="message_amount_lost">You lost %s points</string>
    <string name="content_description_project_link">Project link</string>

    <!--Game-->
    <string name="game_answer_attempt_hint">Type your answer attempt</string>
    <string name="game_button_send_content_description">Send attempt</string>
    <string name="game_entry_menu_report_entry">Report entry</string>
    <string name="game_quit_confirmation_title">Quit game</string>
    <string name="game_quit_confirmation_message">Are you sure you want to leave the current session?</string>
    <string name="game_entry_reported_successfully">Entry reported successfully</string>
    <string name="game_entry_already_reported">Entry already reported by you</string>
    <string name="game_entry_report_error">Entry report error</string>
    <string name="game_dialog_title_rules">Game rules</string>
    <string name="game_dialog_message_rules">
\t- An entry is displayed every round\n
\t- Every player has 3 free attempts available to submit the correct answer\n
\t- Additional attempts will cost 1 point\n
\t- The answers are case insensitive\n
\t- Every 5 seconds, a new random character is revealed from the answer (defined as a split)\n
\t- Entries range from 10 to 100 points in value (based on their difficulty)\n
\t- Their value decreases as more characters are revealed\n
\t- The first player to submit the correct answer wins the prize and the round is over\n
\t- This is a real-time multiplayer game, be nice to each other 😉\n\n
Hint: you can disable this dialog in the Settings screen</string>
    <string name="game_dialog_positive_button_rules">Let\'s play</string>
    <string name="game_dialog_negative_button_rules">Take me back</string>

    <!--Dialog-->
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_title_confirmation">Confirmation</string>

    <!--User-->
    <string name="user_playing">Playing</string>
    <string name="user_last_seen_prefix">Last seen:</string>
    <string name="user_action_dialog_title">Select an option</string>
    <string name="user_action_dialog_option_upgrade_to_moderator">Upgrade to moderator</string>
    <string name="user_action_dialog_option_downgrade_to_regular_user">Downgrade to regular user</string>

    <!--General messages-->
    <string name="general_error_message">Error: %s</string>

    <!--Socket connection messages-->
    <string name="message_socket_connection_lost">Connection lost</string>
    <string name="message_socket_connection_error">Connection error</string>

    <!--Game messages-->
    <string name="message_insufficient_funds">Insufficient funds</string>

    <!--REST messages-->
    <string name="message_user_upgraded_to_moderator">%s was upgraded to moderator rights</string>
    <string name="message_user_downgraded_to_regular">%s was downgraded to regular rights</string>
    <string name="message_unable_to_refresh_account_info">Unable to refresh your account info\nDisplaying cached data instead</string>
    <string name="message_unable_to_refresh_leaderboard">Unable to refresh leaderboard\nDisplaying cached data instead</string>

    <!--Moderate Reports-->
    <string name="tab_reported_entries">Reported entries</string>
    <string name="tab_banned_entries">Banned entries</string>
    <string name="ban_entry_button">Ban entry</string>
    <string name="unban_entry_button">Unban entry</string>
    <string name="dismiss_report_button">Dismiss report</string>
    <string name="reporter_prefix">Reported by:</string>
    <string name="reporter_suffix">and %d others</string>
    <string name="reporter_account_unavailable">[account unavailable]</string>
    <string name="last_reported_prefix">Last reported:</string>
    <string name="message_entry_banned">Entry banned successfully</string>
    <string name="message_entry_unbanned">Entry unbanned successfully</string>
    <string name="message_report_dismissed">Entry report dismissed successfully</string>
    <string name="dialog_message_confirm_ban">Are you sure you want to ban the selected entry?</string>
    <string name="dialog_message_confirm_unban">Are you sure you want to unban the selected entry?</string>
    <string name="dialog_message_confirm_dismiss_report">Are you sure you want to dismiss the selected entry report?</string>

    <!--Preferences Titles-->
    <string name="pref_screen_category_display">Display</string>
    <string name="pref_screen_relative_time">Relative time</string>
    <string name="pref_screen_show_rules_on_game_join">Show rules when joining the game</string>
    <string name="pref_screen_category_sound">Sound</string>
    <string name="pref_screen_winning_sounds">Winning sounds</string>
    <string name="pref_screen_losing_sounds">Losing sounds</string>
    <string name="pref_screen_attempt_sounds">Attempt sounds</string>
    <string name="pref_screen_split_sounds">Split sounds</string>
    <string name="pref_screen_category_vibration">Vibration</string>
    <string name="pref_screen_winning_vibration">Winning vibration</string>
    <string name="pref_screen_category_danger_zone">Danger zone</string>
    <string name="pref_screen_delete_account">Delete account</string>
    <string name="pref_screen_disconnect_everyone">Disconnect everyone</string>

    <!--Preference - Delete Account-->
    <string name="dialog_delete_account_title">WARNING</string>
    <string name="dialog_delete_account_message">This action is permanent, you will lose your account data, including your earned points and the username you are now using will be made available for registration to anyone. Continue?</string>
    <string name="message_account_deleted">Account deleted</string>

    <!--Preference - Disconnect Everyone-->
    <string name="dialog_disconnect_everyone_title">Are you sure</string>
    <string name="dialog_disconnect_everyone_message">All currently playing users will be disconnected from the game. Continue?</string>
    <string name="message_disconnect_everyone_success">Success: %s</string>

    <!--Preference keys-->
    <string name="pref_category_key_danger_zone" translatable="false">pref_category_danger_zone</string>
    <string name="pref_key_delete_account" translatable="false">pref_delete_account</string>
    <string name="pref_key_disconnect_everyone" translatable="false">pref_disconnect_everyone</string>

    <!--Privacy Policy-->
    <string name="privacy_policy"><u>Privacy Policy</u></string>

    <!--Unit Test Resources-->
    <string name="test_dialog_title" translatable="false">Title</string>
    <string name="test_dialog_message" translatable="false">Message</string>
    <string name="test_dialog_positive_button" translatable="false">Positive</string>
    <string name="test_dialog_negative_button" translatable="false">Negative</string>
    <string name="test_info_message" translatable="false">This is a test info message: %s %s</string>

</resources>
